manifest/01-helloworld.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-deployment
  labels:
    app: helloworld
spec:
  replicas: 3
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: k8s-demo
        image: amitvashist7/k8s-tiny-web
        imagePullPolicy: IfNotPresent
        ports:
        - name: myappport
          containerPort: 80
