manifest/nginx-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app-deployment
  labels:
    app: nginx-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
        - name: k8s-task
          image: httpd:latest
          # imagePullPolicy: IfNotPresent
          ports:
            - name: myappport
              containerPort: 80
