manifest/02-helloworld-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
spec:
  ports:
  - port: 31005
    nodePort: 31001
    targetPort: myappport
    protocol: TCP
  selector:
    app: helloworld
  type: NodePort
