manifest/nginx-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-service
spec:
  ports:
  - port: 80
    nodePort: 31002
    targetPort: myappport
    protocol: TCP
  selector:
    app: nginx-app 
  type: NodePort
